Revert "8349944: [JMH] sun.misc.UnsafeOps cannot access class jdk.internal.misc.Unsafe"
This reverts commit ebc32ae2c6e448075fedbdbb2b4879c43829c44b.